--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
     <title>React App</title>
   </head>
   <body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
+
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
